# Internal-FastAPI

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
env_fastapi/: main.py  settings.py
env_fastapi/controllers/: main.py
env_fastapi/dto/: user.py
env_fastapi/models/: user.py
env_fastapi/services/: auth.py  user.py  user_manager.py
migrations/: env.py
migrations/versions/: 0b116b3320bc_database_creation.py  7044a96e9aa4_add_auth_user.py
tests/: test_status.py
