[tool.poetry]
name = "env-fastapi"
version = "0.1.0"
description = ""
authors = ["darkentrery <badajkovmihail@gmail.com>"]
readme = "README.md"
packages = [{include = "env_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.17"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
mypy = "^1.4.1"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
